@@ -1,3 +1,8 @@
+2010-10-05  Florian Ragwitz  <rafl@debian.org>  (tiny change)
+
+	* sieve-manage.el (sieve-manage-default-stream): Make default stream
+	customizable.
+
 2010-10-05  Julien Danjou  <julien@danjou.info>
 
 	* gnus-util.el (gnus-emacs-completing-read)
